# CppND-System-Monitor

./: CMakeLists.txt  README.md
include/: linux_parser.h  process.h  processor.h  read_key_value.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  read_key_value.cpp  system.cpp
